# WhatsAppWebHook

./: README.md  WhatsAppWebHook.yaml  lambda_function.py  pyproject.toml
.github/workflows/: main.yml
whatsappwebhook/: lambda_function.py
