[tool.poetry]
name = "whatsappwebhook"
version = "0.1.0"
description = ""
authors = ["jcable <julian.cable@bbc.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.group.dev.dependencies]
boto3 = "^1.26.79"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
